--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ package-mode = false
 python = "^3.9"
 apache-tvm = "0.11.1"
 onnx = "1.14.0"
+onnxruntime = "^1.17.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
